--- a/react-course/app/index.html
+++ b/react-course/app/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Classic React</title>
-				<link
-					rel="icon"
-					type="image/png"
-					size="48x48"
-					href="https://www.reactboston.com/static/favicon-ab1f1665723ab007dd6b0fe5ac3f4e95.ico">
-    </head>
-		<body>
-			<div id="app"></div>
-		</body>
+	<head>
+		<title>Classic React</title>
+		<link
+			rel="icon"
+			type="image/png"
+			size="48x48"
+			href="https://www.reactboston.com/static/favicon-ab1f1665723ab007dd6b0fe5ac3f4e95.ico">
+			<link rel="preconnect" href="https://fonts.googleapis.com" />
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+			<link
+				href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;700;900&family=Paytone+One&display=swap"
+				rel="stylesheet"
+			/>    
+	</head>
+	<body>
+		<div id="app"></div>
+	</body>
 </html>
